--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A bot that tells Chuck Norris jokes.",
   "main": "lib/norrisbot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bin/bot.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -20,5 +19,8 @@
   "dependencies": {
     "slackbots": "^0.5.1",
     "sqlite3": "^3.1.1"
+  },
+  "engines": {
+    "node": "4.1.1"
   }
 }
